update: dsa 12.md

--- a/dsa/contents/12.md
+++ b/dsa/contents/12.md
@@ -1,6 +1,6 @@
 ### 人鬼渡河问题
 
-1 ) 问题描述
+1 ) **问题描述**
 
 - 目标:将东岸的3人3鬼通过一只小船安全转移到西岸，希望摆渡次数尽可能少
 - 条件
@@ -67,28 +67,28 @@
 </div>
 
 - 还有一个需要确定船的方向，船过去船回来加减问题很重要，这个方向如何数字化，而且要求方便计算
-- 设K为摆渡行船的次数(序号，从1开始计数)，用奇偶性来表示渡船的方向，从东岸到西岸或从西岸到东岸记1次。显然
-    * 船从东到西，K为奇数, 此处东岸乘客数量减少
-    * 船从西到东，K为偶数, 此处东岸乘客数量增加
-- 定义一个2维向量$d_k$为第K次渡河的摆渡策略: $d_k = (U_k, V_k)$
-    * 其中，$U_k$为上船的人数，$V_k$为上船的鬼数，则所有合法(规则:船上最多只能坐2人)的渡河摆渡决策集合D定义如下:
-    * $D = \{(U,V)\}$
-        * U = 2, V = 0;
-        * U = 1, V = 0;
-        * U = 1, V = 1;
-        * U = 0, V = 1;
-        * U = 0, V = 2;
+- 设k为摆渡行船的次数(序号，从1开始计数)，用奇偶性来表示渡船的方向，从东岸到西岸或从西岸到东岸记1次。显然
+    * 船从东到西，k为奇数, 此处东岸乘客数量减少
+    * 船从西到东，k为偶数, 此处东岸乘客数量增加
+- 定义一个2维向量$d_k$为第K次渡河的摆渡策略: $d_k = (r_k, g_k)$
+    * 其中，$r_k$为上船的人数，$g_k$为上船的鬼数，则所有合法(规则:船上最多只能坐2人)的渡河摆渡决策集合D定义如下:
+    * $D = \{(r,g)\}$
+        * r = 2, g = 0;
+        * r = 1, g = 0;
+        * r = 1, g = 1;
+        * r = 0, g = 1;
+        * r = 0, g = 2;
 
-- 还有就是渡河前东岸的安全状态问题，用2维向量$S_k = (R_k, G_k)$定义为第K次渡河前东岸的渡河状态，则安全渡河东岸状态集合S有：
+- 还有就是渡河前东岸的安全状态问题，用2维向量$S_k = (R_k, G_k)$定义为第k次渡河前东岸的渡河状态，则安全渡河东岸状态集合S有：
     * $S = \{(R,G)\}$
-    * $R=0, G=0,1,2,3$
-    * $R=3, G=0,1,2,3$
-    * $R=1, G=1$
-    * $R=2, G=2$
+      * $R=0, G=0,1,2,3$
+      * $R=3, G=0,1,2,3$
+      * $R=1, G=1$
+      * $R=2, G=2$
     * 根据规则，推导出安全性检测标准: 在东岸，人数等于3或人数等于0，或人数鬼数相等, 用代码表示相关逻辑为：
         ```cpp
-        // u表示东岸人数,v表示东岸鬼数
-        bool AQ = (u == 3) || (u == 0) || (u == v) // 是否安全
+        // r表示东岸人数,g表示东岸鬼数
+        bool AQ = (r == 3) || (r == 0) || (r == g) // 是否安全
         if(!AQ) continue; // 如果不安全，则舍弃当前决策
         ```
 
@@ -101,7 +101,7 @@
 
 - 可以看到上图中红色的点表示不安全
 - 由之前的 $S_{k+1} = S_k \pm \triangle_k \Leftrightarrow S_{k+1} = S_k \pm d_k \Leftrightarrow S_{k+1} = S_k + (-1)^k d_k$
-    * 注意:K的范围是[1..n]，从1开始，到未知待求的n结束
+    * 注意:k的范围是[1..n]，从1开始，到未知待求的n结束
 - 整个模拟过程如下：
 
 <div align="center">
@@ -206,7 +206,7 @@
 
 ### 人鬼渡河问题升级
 
-1 ) 问题升级
+1 ) **问题升级**
 
 - 目标: 将东岸的3人3鬼通过一只小船安全转移到西岸，希望摆渡次数尽可能少
 - 条件:
@@ -215,7 +215,7 @@
     * 怎样渡河的大权掌握在人的手中
 - 任务: 编写程序，求出所有的渡河方案，要求没有多余的重复步骤
 
-2 ) 分析
+2 ) **分析**
 
 - 视某一时刻东岸的(人，鬼)数对，是状态空间中的坐标点!
 - 于是:
