--- a/dsa/contents/13.md
+++ b/dsa/contents/13.md
@@ -22,17 +22,193 @@
 
 ```cpp
 
+#include <iostream> 
+using namespace std;
+
+int h;
+int num;
+struct position { int x; };
+position dxy[] = {{1}, {2}, {3}}; 
+position start_pos = {0}, goal_pos = {h};
+position path[100];
+
+/* --------------------- 辅助函数 开始 ------------------------ */
+bool IsEq(position pos1, position pos2) { 
+    return (pos1.x == pos2.x);
+}
+bool IsDone(position pos) {
+    return IsEq(pos, goal_pos);
+}
+
+bool IsValid(position pos) {
+    return (pos.x >=0) && (pos.x <= h);
+}
+
+position GetNewPos(position pos, int k) {
+    position next_pos = {pos.x + dxy[k].x};
+    return next_pos;
+}
+void LogStep(int step, position pos) {
+    path[step] = pos;
+}
+
+void OutStep(position pos) { 
+    cout << pos.x << ' ';
+}
+
+void OutAll(int step) {
+    for (int i=0; i<step; i++) {
+        OutStep(path[i]);
+    }
+    cout << endl;
+}
+/* --------------------- 辅助函数 结束 ------------------------ */
+
+// 递归函数
+void Jump(position pos, int step) {
+    // 是否达到目标
+    if(IsDone(pos)) {
+        num++; // 方案数+1
+        cout << "当前位置" << num << ": ";
+        OutAll(step); // 输出方案
+        return;
+    }
+    // 遍历N种方案
+    for (int k = 0; k < sizeof(dxy) / sizeof(dxy[0]); k++) {
+        position next_pos = GetNewPos(pos, k);
+        if(!IsValid(next_pos)) {
+            continue; // nex_pos是否可行？
+        }
+        LogStep(step, next_pos); // 记录方案
+        Jump(next_pos, step + 1); // 走下一步
+    }
+}
+
+// main函数
+int main() {
+    // 要求用户输入来更新最终位置
+    cout << "请输入楼梯台阶数："; 
+    cin >> h;
+    position h_num = {h};
+    goal_pos = h_num;
+
+    num = 0; // 初始方案数置0
+    Jump(start_pos, 0); // 走第一步
+    cout << "总方案数: " << num << endl;
+    return 0;
+}
 ```
+
+- 这个下楼问题算法重构是逆向思维转化为上楼问题，都是状态的转变
+- 当然稍微修改下算法就可以变成下楼问题了，两者方案都是一样的解决方案
+- 之前的算法是输出步骤，现在的算法是输出位置
 
 3) **跳马问题算法重构**
 
 ```cpp
 
+#include <iostream>
+using namespace std;
+
+struct position { int x, y; };
+position dxy[] = {{1,2}, {2,1}, {2, -1}, {1, -2}}; 
+position start_pos = {0, 0}, goal_pos = {8, 4};
+position path[100];
+int num;
+
+/* --------------------- 辅助函数 开始 ------------------------ */
+bool IsEq(position pos1, position pos2) {
+    return (pos1.x == pos2.x) && (pos1.y == pos2.y);
+}
+
+bool IsDone(position pos) {
+    return IsEq(pos, goal_pos);
+}
+
+bool IsValid(position pos) {
+    return (pos.x >= 0) && (pos.x <= 8) && (pos.y >= 0) && (pos.y <= 4);
+}
+
+position GetNewPos(position pos, int k) {
+    position next_pos = {pos.x + dxy[k].x, pos.y + dxy[k].y}; 
+    return next_pos;
+}
+void LogStep(int step, position pos) {
+    path[step] = pos;
+}
+
+void OutStep(position pos) {
+    cout << "(" << pos.x << ", "<< pos.y << ") ";
+}
+void OutAll(int step) {
+    for (int i=0; i<step; i++) OutStep(path[i]);
+    cout << endl;
+}
+/* --------------------- 辅助函数 结束 ------------------------ */
+
+void Jump(position pos, int step) {
+    // 是否达到目标
+    if(IsDone(pos)) {
+        num++; // 方案数+1
+        cout << "当前位置" << num << ": ";
+        OutAll(step); // 输出方案
+        return;
+    }
+    // 遍历N种方案
+    for (int k = 0; k < sizeof(dxy) / sizeof(dxy[0]); k++) {
+        position next_pos = GetNewPos(pos, k);
+        if(!IsValid(next_pos)) {
+            continue; // nex_pos是否可行？
+        }
+        LogStep(step, next_pos); // 记录方案
+        Jump(next_pos, step + 1); // 走下一步
+    }
+}
+
+int main() {
+    num = 0; // 初始方案数置0 
+    Jump(start_pos, 0); // 走第一步
+    cout << "总方案数：" << num << endl;
+    return 0;
+}
 ```
 
-4 ) **下楼跳马问题通用算法框架**
+- 从两个问题的算法重构可以看出：
+    * 通过辅助函数把两个问题的共同特点找回来了，同时把差异的地方隔离开来
+    * 递归程序完全相同，main函数也趋近一致
+    * 不管是下马，跳楼，还是是类似的问题，只要稍微修改下，即可成为一个solid的解决方案
+- 所以算法重构有很多的好处
+
+4 ) **下楼和跳马问题通用算法框架**
 
 ```cpp
+void Jump(position pos, int step) {
+    // 是否达到目标
+    if(IsDone(pos)) {
+        num++; // 方案数+1
+        cout << "当前位置" << num << ": ";
+        OutAll(step); // 输出方案
+        return;
+    }
+    // 遍历N种方案
+    for (int k = 0; k < sizeof(dxy) / sizeof(dxy[0]); k++) {
+        position next_pos = GetNewPos(pos, k);
+        if(!IsValid(next_pos)) {
+            continue; // nex_pos是否可行？
+        }
+        LogStep(step, next_pos); // 记录方案
+        Jump(next_pos, step + 1); // 走下一步
+    }
+}
+
+int main() {
+    num = 0; // 初始方案数置0 
+    Jump(start_pos, 0); // 走第一步 
+    return 0;
+}
 ```
 
-TODOS
+- 算法框架的三个关键点: 
+    * 判断结束状态
+    * 产生新的状态
+    * 判断是否合法
