update: dsa 13.md

--- a/dsa/contents/13.md
+++ b/dsa/contents/13.md
@@ -9,6 +9,13 @@
 
 1 ) **对比下楼问题和跳马问题**
 
+<div align="center">
+    <img width="900" src="./screenshot/25.jpg">
+    <br />
+    <div style="text-align:center">备注：图片托管于github，请确保网络的可访问性</div>
+    <br />
+</div>
+
 - 两个问题的具体分析在前面的文章中已经完成，我们来对比一下两者
 - 两者结构很像，都用递归枚举算法, 下楼问题有三个分叉，跳马问题有四个分叉
 - 两者与或图基本相同，在算法上是同一类问题，可以使用基本相同的程序来求解
