update: dsa 14.md

--- a/dsa/contents/14.md
+++ b/dsa/contents/14.md
@@ -44,7 +44,7 @@
 - 当然，这两个问题也有区别:
     * 分书问题中，可以设置元素的位置是矩阵的一个子集，即题面描述中给出的用户与图书之间的喜好关系表
     * 八皇后问题中，所有位置均可以选择，没有限制
-      * 如果棋盘上有破洞，或者有些地方防止地雷等，增加了限制，那就另当别论了
+      * 如果棋盘上有破洞，或者有些地方放置地雷等，增加了限制，那就另当别论了
 
 2 ) **分书和八皇后问题算法重构**
 
