update: das 15.md

--- a/dsa/contents/15.md
+++ b/dsa/contents/15.md
@@ -28,13 +28,13 @@
 - 递归算法的与或图如下
 
 <div align="center">
-    <img width="400" src="./screenshot/31.jpg">
+    <img width="600" src="./screenshot/31.jpg">
     <br />
     <div style="text-align:center">备注：图片托管于github，请确保网络的可访问性</div>
     <br />
 </div>
 
-- 形象的描述为下图：
+- Fill的过程形象的描述为下图：
 
 <div align="center">
     <img width="400" src="./screenshot/32.jpg">
