update: python 4.md

--- a/python/contents/4.md
+++ b/python/contents/4.md
@@ -25,7 +25,7 @@
     c: 3
   ```
 
-- 除了可以将两个列表组合到一起之外，还可以使用星号拆封列表，返回的是单个元组
+- 除了可以将两个列表组合到一起之外，还可以使用星号拆分列表，返回的是单个元组
   ```python
     some_list = [('a', 1), ('b', 2), ('c', 3)]
     letters, nums = zip(*some_list)
@@ -89,7 +89,7 @@
     X: -5, 445, -1
   ```
 
-- 使用 `zip` 创建一个字段 `cast`，该字典使用 `names` 作为键，并使用 `heights` 作为值。
+- 使用 `zip` 创建一个字典 `cast`，该字典使用 `names` 作为键，并使用 `heights` 作为值。
 
   解决方案：
 
@@ -107,7 +107,7 @@
     {'Barney': 72, 'Ted': 72, 'Robin': 68, 'Lily': 66, 'Marshall': 76}
   ```
 
-- 将 `cast` 元组拆封成两个 `names` 和 `heights` 元组。
+- 将 `cast` 元组拆分成两个 `names` 和 `heights` 元组。
 
   解决方案：
 
