--- a/dsa/contents/15.md
+++ b/dsa/contents/15.md
@@ -95,6 +95,140 @@ void Fill(int num, int begin, int size) {
 
 - 当然这个6可以很容易的抽离出来变为n, 由用户填写可得N*N的矩阵
 
-3 ) **使用OOP的思路来做**
+3 ) **使用OOP的思路来做(优化版)**
 
-- TODO
+- 在面向对象OOP中，可以借助对象来执行相应的方法来做
+- 代码实现
+
+```cpp
+#include <iostream>
+#include <iomanip>
+using namespace std;
+
+class matrix {
+    int **M;
+    int N;
+
+public:
+    void init(int size);
+    void fill(int num, int begin, int size);
+    void print();
+    void clear();
+};
+
+void matrix::init(int size) {
+    // 初始化数据结构：N*N的矩阵
+    // 用下面这种方式初始化一个N*N的矩阵
+    M = new int*[size];
+    N = size; // 用于后面的打印和清理
+    // r means 'row'
+    for (int r=0; r<size; r++) {
+        M[r] = new int[size];
+        memset(M[r], 0, sizeof(int)*size); // 矩阵清零，表示无数字 
+    }
+}
+
+void matrix::fill(int num, int begin, int size) {
+    if (size == 0) {
+        return;
+    }
+    if (size == 1) {
+        M[begin][begin] = num;
+        return;
+    }
+    // 四个边的遍历
+    for (int j=0; j<size-1; j++) M[begin+j][begin+0] = num++;
+    for (int j=0; j<size-1; j++) M[begin+size-1][begin+j] = num++;
+    for (int j=size-1; j>0; j--) M[begin+j][begin+size-1] = num++;
+    for (int j=size-1; j>0; j--) M[begin+0][begin+j] = num++;
+    fill(num, begin+1, size-2);
+}
+
+// print 打印矩阵格子
+void matrix::print() {
+    for (int i = 0; i < N; i++) {
+        for (int j=0; j< N; j++) {
+            cout << setw(2) << M[i][j] << ' ';
+        }
+        cout << endl;
+    }
+}
+
+void matrix::clear() {
+    for (int r=0; r<N; r++) delete[] M[r];
+    delete[] M;
+}
+
+int main() {
+    matrix obj;
+    cout << "Please input N: ";
+    int size; 
+    cin >> size;
+    obj.init(size); // 根据输入大小做准备
+    obj.fill(1, 0, size); // 按规则完成数字填充
+    obj.print(); // 输出填充结果
+    obj.clear(); // 一些必要的善后处理
+    return 0;
+}
+```
+
+- 当然，除了这一种递归算法，也可以通过制定一些走路的规则来填充矩阵，如下图
+
+<div align="center">
+    <img width="400" src="./screenshot/33.jpg">
+    <br />
+    <div style="text-align:center">备注：图片托管于github，请确保网络的可访问性</div>
+    <br />
+</div>
+
+- 把画矩形这事抽象成一个小人走格子，每走一个格子就写一个值，一路走下去，当然走的规则需要进行指定，一些规则参考如下：
+
+```cpp
+
+class matrix {
+    char dir; // 'D', 'R', 'U', 'L' 注：这里有四个边，左下右上，逆时针方向，其中左边的方向是向下，用D来表示，其他依次类推
+}
+
+// 'D', 'R', 'U', 'L' 注：这里有四个边，左下右上，逆时针方向，其中左边的方向是向下，用D来表示，其他依次类推
+void matrix::place(int num) {
+    // 根据前一位置、方向，以及摆放规则(DRUL)确定下一个摆放数据的位置
+    switch (dir) {
+        case 'D':
+            // 先保证row在合法范围内，再考虑该处是否已有数字(是否为0) 
+            if (row < N-1 && M[row+1][col] == 0) row++; 
+            else {
+                dir = 'R'; // next direction
+                col++;
+            }
+            break;
+        // 仅展示部分源码
+        // ...
+}
+```
+
+- 一路走下图，如图：
+
+<div align="center">
+    <img width="400" src="./screenshot/34.jpg">
+    <br />
+    <div style="text-align:center">备注：图片托管于github，请确保网络的可访问性</div>
+    <br />
+</div>
+
+- 可以看到，填充算法的执行过程与矩阵结构有关，两者紧密耦合
+
+### 场景变化
+
+- 我们所处的世界复杂多变，就这一类填充问题，就可以有无数的变形。
+- 如果旋转方向从逆时针变成顺时针，则程序应该如何修改?
+- 如果希望两种旋转方向的填充策略都能支持，程序又应该如何修改?
+- 更进一步地，如果希望扩展到其他类型的填充次序，如蛇形、Z字形、U字形...等，应该如何修改类的对外接口与具体实现?
+
+<div align="center">
+    <img width="700" src="./screenshot/35.jpg">
+    <br />
+    <div style="text-align:center">备注：图片托管于github，请确保网络的可访问性</div>
+    <br />
+</div>
+
+- 进一步我们深入思考矩阵到底是什么？
